@@ -2,6 +2,8 @@
 ======
 Apr 3, 2023
 - Refactored string interpolation
+- Improved error reporting in CSV lookup DSL
+- Improved Examples annotation CSV processing and error reporting
 
 3.34.4
 ======
